# rust_practice

./: .gitignore  Cargo.toml
celsius_to_fahrenheit/: Cargo.toml
exercises/celsius_to_fahrenheit/src/: main.rs
exercises/employee_list/src/: main.rs
exercises/median_and_mode/src/: main.rs
exercises/nth_fibonacci/src/: main.rs
exercises/pig_latin/src/: main.rs
exercises/twelve_days/src/: main.rs
functions/src/: main.rs
guessing_game/src/: main.rs
learning/about_macros/: Cargo.toml
learning/about_macros/src/: main.rs
learning/adder/src/: lib.rs
learning/adder/tests/: integration_test.rs
learning/advanced_functions/src/: main.rs
learning/advanced_traits/src/: main.rs
learning/advanced_types/src/: main.rs
learning/aggregator/src/: lib.rs  main.rs
learning/blog/src/: lib.rs  main.rs
learning/branches/src/: main.rs
learning/channel_messaging/: Cargo.toml
learning/channel_messaging/src/: main.rs
learning/collections/src/: main.rs
learning/enums/src/: main.rs
learning/generics/src/: main.rs
learning/guessing_game/src/: main.rs
learning/minigrep/src/: lib.rs  main.rs
learning/mock-objects/: Cargo.toml
learning/ownership/src/: main.rs
learning/pattern_matching/src/: main.rs
learning/rectangles/src/: main.rs
learning/restaurant/src/: back_of_house.rs  lib.rs
learning/shared_state/src/: main.rs
learning/shirt_giveaway/src/: main.rs
learning/structures/src/: main.rs
learning/threads/src/: main.rs
learning/trait_objects/src/: lib.rs  main.rs
learning/trees/src/: main.rs
learning/unsafe_rust/src/: main.rs
learning/web_server/src/: lib.rs  main.rs
loops/src/: main.rs
variables/src/: main.rs
