[workspace]

members = [
    "exercises/celsius_to_fahrenheit",
    "exercises/nth_fibonacci",
    "exercises/twelve_days",
    "exercises/median_and_mode",
    "exercises/pig_latin",
     "exercises/employee_list",
    "learning/branches",
    "learning/functions",
    "learning/guessing_game",
    "learning/hello_cargo",
    "learning/loops",
    "learning/variables",
    "learning/ownership",
    "learning/structures",
    "learning/rectangles",
    "learning/enums",
    "learning/backyard",
    "learning/restaurant",
    "learning/collections",
    "learning/generics",
    "learning/aggregator",
]
